--- a/files/windows/iaps/nginx.conf.tmpl
+++ b/files/windows/iaps/nginx.conf.tmpl
@@ -44,14 +44,20 @@ http {
         # All requests are proxied onto more secure upstream services
         ssl_protocols       SSLv3 TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
- 
-        location / {
+        
+        # Proxy requests to the NDelius Interface ALB
+        location ^~ /NDeliusIAPS {
             proxy_pass      https://__INTERFACE__:443$request_uri;
             proxy_set_header Host __INTERFACE__;
-            proxy_set_header X-Real-IP  $remote_addr;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_redirect off;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        
+        # Proxy all other requests to the PSN proxies to route back to IM servers
+        location / {
+            proxy_pass      https://__PSNPROXY__/;
+            proxy_set_header Host __PSNPROXY__;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect default;
+        }
     }
 }
