--- a/files/windows/iaps/nginx.conf.tmpl
+++ b/files/windows/iaps/nginx.conf.tmpl
@@ -29,7 +29,7 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-
+    client_max_body_size 10M;
     server {
         listen 443 ssl;
         server_name localhost;
